## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libhelios_common.a


libhelios_common_CPPFLAGS =
libhelios_common_CFLAGS = -W -Wall
libhelios_common_CXXFLAGS = -W -Wall
## libhelios_common_LDFLAGS =
## libhelios_common_LIBADD =

libhelios_common_a_SOURCES = \
	ball_move_model.cpp \
	default_clang_holder.cpp \
	formation_factory.cpp \
	options.cpp \
	std_normal_dist.cpp

noinst_HEADERS = \
	ball_move_model.h \
	default_clang_holder.h \
	formation_factory.h \
	options.h \
	periodic_callback.h \
	std_normal_dist.h \
	types.h


AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDLAGS =

CLEANFILES = core *~
