## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = subdir-objects

noinst_PROGRAMS = helios_player

##	field_evaluator_printer

helios_player_CPPFLAGS = -I$(top_srcdir)/src/common
helios_player_CXXFLAGS = -W -Wall
#helios_player_LDFLAGS = -L$(top_builddir)/src/common
helios_player_LDADD = $(top_builddir)/src/common/libhelios_common.a

helios_player_SOURCES = \
	rcsc/action/body_intercept2010.cpp \
	rcsc/action/body_intercept2013.cpp \
	tac_442_side_attack/bhv_442_side_attack_move.cpp \
	wall_break_move/bhv_defensive_half_wall_break_move.cpp \
	wall_break_move/bhv_offensive_half_wall_break_move.cpp \
	wall_break_move/bhv_side_half_wall_break_move.cpp \
	act_clear.cpp \
	act_dribble.cpp \
	act_hold_ball.cpp \
	act_move.cpp \
	act_pass.cpp \
	act_shoot.cpp \
	generator_block_move.cpp \
	generator_center_forward_free_move.cpp \
	generator_clear.cpp \
	generator_cross.cpp \
	generator_cross_move.cpp \
	generator_keep_dribble.cpp \
	generator_omni_dribble.cpp \
	generator_pass.cpp \
	generator_receive_move.cpp \
	generator_self_pass.cpp \
	generator_shoot.cpp \
	generator_short_dribble.cpp \
	generator_tackle.cpp \
	actgen_clear.cpp \
	actgen_cross.cpp \
	actgen_direct_pass.cpp \
	actgen_hold.cpp \
	actgen_keep_dribble.cpp \
	actgen_omni_dribble.cpp \
	actgen_pass.cpp \
	actgen_self_pass.cpp \
	actgen_simple_cross.cpp \
	actgen_simple_dribble.cpp \
	actgen_shoot.cpp \
	actgen_short_dribble.cpp \
	actgen_voronoi_pass.cpp \
	bhv_attacker_offensive_move.cpp \
	bhv_basic_move.cpp \
	bhv_block_ball_owner.cpp \
	bhv_center_back_danger_move.cpp \
	bhv_center_back_defensive_move.cpp \
	bhv_center_back_offensive_move.cpp \
	bhv_center_forward_cross_move.cpp \
	bhv_center_forward_move.cpp \
	bhv_chain_action.cpp \
	bhv_clear_ball.cpp \
	bhv_cross_move.cpp \
	bhv_custom_before_kick_off.cpp \
	bhv_defender_basic_block_move.cpp \
	bhv_defender_mark_move.cpp \
	bhv_defensive_half_avoid_mark_move.cpp \
	bhv_defensive_half_cross_block_move.cpp \
	bhv_defensive_half_danger_move.cpp \
	bhv_defensive_half_defensive_move.cpp \
	bhv_defensive_half_offensive_move.cpp \
	bhv_deflecting_tackle.cpp \
	bhv_find_player.cpp \
	bhv_get_ball.cpp \
	bhv_go_to_cross_point.cpp \
	bhv_go_to_static_ball.cpp \
	bhv_goalie_free_kick.cpp \
	bhv_hold_ball.cpp \
	bhv_keep_dribble.cpp \
	bhv_mark_go_to_point.cpp \
	bhv_mid_fielder_free_move.cpp \
	bhv_mid_fielder_mark_move.cpp \
	bhv_normal_dribble.cpp \
	bhv_offensive_half_defensive_move.cpp \
	bhv_offensive_half_offensive_move.cpp \
	bhv_pass.cpp \
	bhv_penalty_kick.cpp \
	bhv_prepare_set_play_kick.cpp \
	bhv_shoot.cpp \
	bhv_savior.cpp \
	bhv_savior_penalty_kick.cpp \
	bhv_self_pass.cpp \
	bhv_self_pass_penalty_kick.cpp \
	bhv_set_play.cpp \
	bhv_set_play_avoid_mark_move.cpp \
	bhv_set_play_free_kick.cpp \
	bhv_set_play_goal_kick.cpp \
	bhv_set_play_goalie_catch_move.cpp \
	bhv_set_play_indirect_free_kick.cpp \
	bhv_set_play_kick_in.cpp \
	bhv_set_play_kick_off.cpp \
	bhv_set_play_our_corner_kick.cpp \
	bhv_side_back_aggressive_cross_block.cpp \
	bhv_side_back_block_ball_owner.cpp \
	bhv_side_back_block_ball_owner_dribble.cpp \
	bhv_side_back_danger_move.cpp \
	bhv_side_back_defensive_move.cpp \
	bhv_side_back_dribble_defensive_move.cpp \
	bhv_side_back_mark_move.cpp \
	bhv_side_back_offensive_move.cpp \
	bhv_side_forward_attack_move.cpp \
	bhv_side_half_attack_move.cpp \
	bhv_side_half_cross_move.cpp \
	bhv_side_half_defensive_move.cpp \
	bhv_side_half_offensive_move.cpp \
	bhv_side_half_pass_request_move2013.cpp \
	bhv_side_half_pass_request_move2014.cpp \
	bhv_side_half_pass_request_move2015.cpp \
	bhv_side_half_pass_request_move2016.cpp \
	bhv_sweeper_danger_move.cpp \
	bhv_sweeper_defensive_move.cpp \
	bhv_tackle_intercept.cpp \
	bhv_tactical_intercept.cpp \
	bhv_tactical_tackle.cpp \
	bhv_their_goal_kick_move.cpp \
	body_savior_go_to_point.cpp \
	neck_chase_ball.cpp \
	neck_check_ball_owner.cpp \
	neck_check_offside_line.cpp \
	neck_default_intercept_neck.cpp \
	neck_goalie_turn_neck.cpp \
	neck_offensive_intercept_neck.cpp \
	neck_scan_opponent.cpp \
	neck_turn_to_receiver.cpp \
	view_tactical.cpp \
	intention_setplay_move.cpp \
	intention_wait_after_set_play_kick.cpp \
	role_center_back.cpp \
	role_center_forward.cpp \
	role_center_half.cpp \
	role_defensive_half.cpp \
	role_forward.cpp \
	role_goalie.cpp \
	role_offensive_half.cpp \
	role_sample.cpp \
	role_savior.cpp \
	role_side_back.cpp \
	role_side_forward.cpp \
	role_side_half.cpp \
	role_sweeper.cpp \
	action_chain_graph.cpp \
	action_chain_best_first_search.cpp \
	action_chain_depth_first_search.cpp \
	action_chain_monte_calro_tree_search.cpp \
	action_chain_holder.cpp \
	action_state_pair.cpp \
	cooperative_action.cpp \
	default_communication.cpp \
	default_freeform_message_parser.cpp \
	defense_system.cpp \
	field_analyzer.cpp \
	field_evaluator.cpp \
	field_evaluator2013.cpp \
	field_evaluator2016.cpp \
	field_evaluator_default.cpp \
	field_evaluator_svmrank.cpp \
	intercept_evaluator2015.cpp \
	keepaway_communication.cpp \
	mark_analyzer.cpp \
	move_simulator.cpp \
	predict_player_object.cpp \
	predict_state.cpp \
	player_graph.cpp \
	shoot_simulator.cpp \
	simple_pass_checker.cpp \
	sirms_model.cpp \
	sirm.cpp \
	soccer_role.cpp \
	statistics.cpp \
	strategy.cpp \
	helios_player.cpp \
	main_player.cpp \
	defensive_sirm.cpp \
	defensive_sirms_model.cpp \
	position_analyzer.cpp

noinst_HEADERS = \
	rcsc/action/body_intercept.h \
	rcsc/action/body_intercept2010.h \
	rcsc/action/body_intercept2013.h \
	tac_442_side_attack/bhv_442_side_attack_move.h \
	wall_break_move/bhv_defensive_half_wall_break_move.h \
	wall_break_move/bhv_offensive_half_wall_break_move.h \
	wall_break_move/bhv_side_half_wall_break_move.h \
	act_clear.h \
	act_dribble.h \
	act_hold_ball.h \
	act_move.h \
	act_pass.h \
	act_shoot.h \
	generator_block_move.h \
	generator_center_forward_free_move.h \
	generator_clear.h \
	generator_cross.h \
	generator_cross_move.h \
	generator_keep_dribble.h \
	generator_omni_dribble.h \
	generator_pass.h \
	generator_receive_move.h \
	generator_self_pass.h \
	generator_shoot.h \
	generator_short_dribble.h \
	generator_tackle.h \
	actgen_clear.h \
	actgen_cross.h \
	actgen_direct_pass.h \
	actgen_filter.h \
	actgen_hold.h \
	actgen_keep_dribble.h \
	actgen_omni_dribble.h \
	actgen_pass.h \
	actgen_self_pass.h \
	actgen_shoot.h \
	actgen_short_dribble.h \
	actgen_simple_cross.h \
	actgen_simple_dribble.h \
	actgen_voronoi_pass.h \
	bhv_attacker_offensive_move.h \
	bhv_basic_move.h \
	bhv_block_ball_owner.h \
	bhv_center_back_danger_move.h \
	bhv_center_back_defensive_move.h \
	bhv_center_back_offensive_move.h \
	bhv_center_forward_cross_move.h \
	bhv_center_forward_move.h \
	bhv_chain_action.h \
	bhv_clear_ball.h \
	bhv_cross_move.h \
	bhv_custom_before_kick_off.h \
	bhv_defender_basic_block_move.h \
	bhv_defender_mark_move.h \
	bhv_defensive_half_avoid_mark_move.h \
	bhv_defensive_half_cross_block_move.h \
	bhv_defensive_half_danger_move.h \
	bhv_defensive_half_defensive_move.h \
	bhv_defensive_half_offensive_move.h \
	bhv_deflecting_tackle.h \
	bhv_find_player.h \
	bhv_get_ball.h \
	bhv_go_to_cross_point.h \
	bhv_go_to_static_ball.h \
	bhv_goalie_free_kick.h \
	bhv_hold_ball.h \
	bhv_keep_dribble.h \
	bhv_mark_go_to_point.h \
	bhv_normal_dribble.h \
	bhv_mid_fielder_free_move.h \
	bhv_mid_fielder_mark_move.h \
	bhv_offensive_half_defensive_move.h \
	bhv_offensive_half_offensive_move.h \
	bhv_pass.h \
	bhv_penalty_kick.h \
	bhv_shoot.h \
	bhv_prepare_set_play_kick.h \
	bhv_savior.h \
	bhv_savior_penalty_kick.h \
	bhv_self_pass.h \
	bhv_self_pass_penalty_kick.h \
	bhv_set_play.h \
	bhv_set_play_avoid_mark_move.h \
	bhv_set_play_free_kick.h \
	bhv_set_play_goal_kick.h \
	bhv_set_play_goalie_catch_move.h \
	bhv_set_play_indirect_free_kick.h \
	bhv_set_play_kick_in.h \
	bhv_set_play_kick_off.h \
	bhv_set_play_our_corner_kick.h \
	bhv_side_back_aggressive_cross_block.h \
	bhv_side_back_block_ball_owner.h \
	bhv_side_back_block_ball_owner_dribble.h \
	bhv_side_back_danger_move.h \
	bhv_side_back_defensive_move.h \
	bhv_side_back_dribble_defensive_move.h \
	bhv_side_back_mark_move.h \
	bhv_side_back_offensive_move.h \
	bhv_side_forward_attack_move.h \
	bhv_side_half_attack_move.h \
	bhv_side_half_cross_move.h \
	bhv_side_half_defensive_move.h \
	bhv_side_half_offensive_move.h \
	bhv_side_half_pass_request_move2013.h \
	bhv_side_half_pass_request_move2014.h \
	bhv_side_half_pass_request_move2015.h \
	bhv_side_half_pass_request_move2016.h \
	bhv_sweeper_danger_move.h \
	bhv_sweeper_defensive_move.h \
	bhv_tackle_intercept.h \
	bhv_tactical_intercept.h \
	bhv_tactical_tackle.h \
	bhv_their_goal_kick_move.h \
	body_savior_go_to_point.h \
	neck_chase_ball.h \
	neck_check_ball_owner.h \
	neck_check_offside_line.h \
	neck_default_intercept_neck.h \
	neck_goalie_turn_neck.h \
	neck_offensive_intercept_neck.h \
	neck_scan_opponent.h \
	neck_turn_to_receiver.h \
	view_tactical.h \
	intention_setplay_move.h \
	intention_wait_after_set_play_kick.h \
	role_center_back.h \
	role_center_forward.h \
	role_center_half.h \
	role_defensive_half.h \
	role_forward.h \
	role_goalie.h \
	role_offensive_half.h \
	role_sample.h \
	role_savior.h \
	role_side_back.h \
	role_side_forward.h \
	role_side_half.h \
	role_sweeper.h \
	action_chain_graph.h \
	action_chain_best_first_search.h \
	action_chain_depth_first_search.h \
	action_chain_monte_calro_tree_search.h \
	action_chain_holder.h \
	action_generator.h \
	action_generator_holder.h \
	action_state_pair.h \
	communication.h \
	cooperative_action.h \
	default_communication.h \
	default_freeform_message_parser.h \
	defense_system.h \
	field_analyzer.h \
	field_evaluator.h \
	field_evaluator2013.h \
	field_evaluator2016.h \
	field_evaluator_default.h \
	field_evaluator_svmrank.h \
	intercept_evaluator.h \
	intercept_evaluator2015.h \
	keepaway_communication.h \
	mark_analyzer.h \
	move_simulator.h \
	pass_checker.h \
	player_graph.h \
	predict_ball_object.h \
	predict_player_object.h \
	predict_state.h \
	shoot_simulator.h \
	simple_pass_checker.h \
	sirm.h \
	sirms_model.h \
	soccer_role.h \
	statistics.h \
	strategy.h \
	helios_player.h \
	defensive_sirm.h \
	defensive_sirms_model.h \
	position_analyzer.h

AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDLAGS =

CLEANFILES = core *~
