## Process this file with automake to produce Makefile.in

noinst_PROGRAMS = \
	add_rank_feature \
	dlog_rank_extract \
	dlog_evaluator_svmrank

add_rank_feature_SOURCES = \
	add_rank_feature.cpp

dlog_rank_extract_SOURCES = \
	dlog_rank_extract.cpp

dlog_evaluator_svmrank_SOURCES = \
	dlog_evaluator_svmrank.cpp


AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDLAGS =

CLEANFILES = core *~
